# RailwayMap

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202606220001_create_stage1_schema.py  202606250001_add_osm_tags_and_types.py  202606250002_add_segment_chunks.py  202606260001_add_10km_sections.py  202606280001_add_50km_sections.py  202606280002_ensure_10km_sections.py
backend/app/: __init__.py  main.py
backend/app/api/: admin.py  health.py  railway.py  spatial_filters.py
backend/app/core/: config.py  database.py
backend/app/crud/: __init__.py
backend/app/events/: __init__.py
backend/app/gis/: __init__.py  measurements.py
backend/app/libs/: __init__.py  geojson.py  measurements.py
backend/app/models/: __init__.py  events.py  railway.py
backend/app/models/events/: __init__.py  defects.py  events.py  layers.py  parameters.py  types.py
backend/app/osm/: __init__.py  cli.py  features.py  importer.py  normalizers.py  readers.py
backend/app/schemas/: __init__.py  common.py  events.py  railway.py
backend/app/services/: chunks.py  deduplicate.py
backend/tests/: test_app.py  test_chunks.py  test_models.py  test_osm_importer.py
backend/utilities/: README.md  __init__.py  download_osm_extract.py  export_railway_sections_csv.py  import_osm.py  rebuild_segment_chunks.py  rebuild_segment_sections_10km.py  rebuild_segment_sections_50km.py  remove_duplicate_segments_chunks.py
frontend/: .dockerignore  (+7 more)
(+74 files in other folders)
