[project]
name = "interactive-railway-map-backend"
version = "0.1.0"
description = "Backend for an interactive railway map with PostGIS-backed railway graph data."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "sqlalchemy>=2.0",
  "geoalchemy2>=0.15",
  "alembic>=1.14",
  "pydantic>=2.10",
  "pydantic-settings>=2.7",
  "psycopg[binary]>=3.2",
  "shapely>=2.0",
  "networkx>=3.4",
  "celery>=5.4",
  "redis>=5.2",
]

[project.scripts]
interactive-map-osm-import = "app.osm.cli:main"

[project.optional-dependencies]
import = [
  "gdal>=3.10",
  "osmium>=4.0",
  "osmnx>=2.0",
  "pyrosm>=0.6",
  "rasterio>=1.4",
]
test = [
  "pytest>=8.3",
  "pytest-cov>=6.0",
]
dev = [
  "mypy>=1.14",
  "ruff>=0.8",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.14"
plugins = []
warn_unused_configs = true
